typed a bit out, testing things

--- a/index.html
+++ b/index.html
@@ -3,4 +3,15 @@
 
 
 
+<head>
+	<title> Shit About ME! </title>
+	<meta charset = "utf-8">
+</head>
+
+<body>
+	<h1> Name: James Wesley Clark </h1>
+	<p><img src="Boy_on_Boat.JPG" alt="Me on a boat" /></p> 
+	
+</body>
+
 </html>
