typed up body of index.html

--- a/index.html
+++ b/index.html
@@ -1,8 +1,5 @@
 <!doctype html>
 <html>
-
-
-
 <head>
 	<title> Shit About ME! </title>
 	<meta charset = "utf-8">
@@ -11,7 +8,8 @@
 <body>
 	<h1> Name: James Wesley Clark </h1>
 	<p><img src="Boy_on_Boat.JPG" alt="Me on a boat" /></p> 
-	
+	<p><a href="http://jclark10.github.io/resume.html"> My Resume </a></p>
+	<p><a href="http://jclark10.github.io/bio.html"> My Bio </a></p>
 </body>
 
 </html>
