--- a/resume.html
+++ b/resume.html
@@ -1,6 +1,41 @@
 <!doctype html>
 <html>
+<head>
+	<title> Resume </title>
+	<meta charset = "utf-8" >
+</head>
 
-
-
+<body>
+	<h1> -Resume- </h1>
+	<ol>
+		<li> Name: James Wesley Clark </li>
+		<li> Education:
+			<ul>
+				<li> Tufts University: Planned Computer Science Major </li>
+				<li> The Potomac School: High School Diploma </li>
+			</ul>
+		</li>
+		<li> Professional Experience: 
+			<ul>
+				<li> The Beachead: Foodrunner, Food Prep </li>
+				<li> Block Island Bike and Car Rental: Employee </li>
+				<li> Kai Kai Sandals: Salesperson </li>
+				<li> Mia's Gelateria: Server </li>
+			</ul>
+		</li>
+		<li> Skills: 
+			<ul>
+				<li> Programming Languages: C++, Java </li>
+				<li> Customer Service Abilities </li>
+				<li> Opening/Closing/Managing a Storefront </li>
+			</ul>
+		</li>
+		<li> Activities: 
+			<ul>
+				<li> Ski Team </li>
+				<li> WMFO Freeform Radio </li>
+			</ul>
+		</li>
+	</ol>
+</body>
 </html>
