changed alt description for picture

--- a/index.html
+++ b/index.html
@@ -1,15 +1,16 @@
 <!doctype html>
 <html>
 <head>
-	<title> Shit About ME! </title>
-	<meta charset = "utf-8">
+	<title> -Homepage- </title>
+	<meta charset = "utf-8" >
+	<meta http-equiv="refresh" content="0; URL='http://jclark10.github.io'" />
 </head>
 
 <body>
 	<h1> Name: James Wesley Clark </h1>
-	<p><img src="Boy_on_Boat.JPG" alt="Me on a boat" /></p> 
+	<p><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></p>
 	<p><a href="http://jclark10.github.io/resume.html"> My Resume </a></p>
-	<p><a href="http://jclark10.github.io/bio.html"> My Bio </a></p>
+	<p><a href="http://jclark10.github.io/bio.html"> My Biography </a></p>
 </body>
 
 </html>
