fixing errors with url redirection

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
 	<title> -Homepage- </title>
 	<meta charset = "utf-8" >
-	<meta http-equiv="refresh" content="0; URL='http://jclark10.github.io'" />
+	<meta http-equiv="refresh" content="8; URL=http://jclark10.github.io" />
 </head>
 
 <body>
