--- a/index.html
+++ b/index.html
@@ -7,10 +7,11 @@
 </head>
 
 <body>
-	<h1> Name: James Wesley Clark </h1>
+	<h1> - Homepage - </h1>
+	
 	<p><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></p>
-	<p><a href="http://jclark10.github.io/resume.html"> My Resume </a></p>
-	<p><a href="http://jclark10.github.io/bio.html"> My Biography </a></p>
+	<p> Name: James Wesley Clark </p>
+	<p><a href="http://jclark10.github.io/resume.html"> My Resume! </a></p>
+	<p><a href="http://jclark10.github.io/bio.html"> My Biography! </a></p>
 </body>
-
 </html>
