added line to include style sheet

--- a/index.html
+++ b/index.html
@@ -4,14 +4,16 @@
 	<title> -Homepage- </title>
 	<meta charset = "utf-8" >
 	<meta http-equiv="refresh" content="8; URL=http://jclark10.github.io" />
+	<link rel="stylesheet" href="style.css">
 </head>
 
 <body>
 	<h1> - Homepage - </h1>
-	
 	<p><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></p>
-	<p> Name: James Wesley Clark </p>
-	<p><a href="http://jclark10.github.io/resume.html"> My Resume! </a></p>
-	<p><a href="http://jclark10.github.io/bio.html"> My Biography! </a></p>
+	<ul>
+	<li> Name: James Wesley Clark </li>
+	<li><a href="http://jclark10.github.io/resume.html"> My Resume! </a></li>
+	<li><a href="http://jclark10.github.io/bio.html"> My Biography! </a></li>
+	</ul>
 </body>
 </html>
