refining style sheet

--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 
 <body>
 	<h1> - Homepage - </h1>
-	<p><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></p>
+	<h4><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></h4>
 	<ul>
-	<li> Name: James Wesley Clark </li>
+	<li> James Wesley Clark </li>
 	<li><a href="http://jclark10.github.io/resume.html"> My Resume! </a></li>
 	<li><a href="http://jclark10.github.io/bio.html"> My Biography! </a></li>
 	</ul>
