refining style sheet pt 2

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 
 <body>
 	<h1> - Homepage - </h1>
-	<h4><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></h4>
+	<p><img src="Boy_on_Boat.JPG" alt="Wes on a boat"/></p>
 	<ul>
 	<li> James Wesley Clark </li>
 	<li><a href="http://jclark10.github.io/resume.html"> My Resume! </a></li>
